service.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: nodejs-service 
spec: 
  type: NodePort
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 3000
