ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "nodeapp"
  namespace: "ui"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: nodejs
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: nodejs-service
              servicePort: 80
